[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.17",
    "langchain>=0.3.18",
    "numpy>=1.26.4",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.0",
    "ta>=0.11.0",
    "yfinance>=0.2.52",
    "twilio>=9.4.4",
]
